<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1"
    android:id="@+id/android.R.id.content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvName" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvDescription" />

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textLongMessage"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvDataCreacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txvDataCreate" />

        <EditText
            android:id="@+id/edtDataCreacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnChange"
                android:layout_gravity="center"
                android:layout_span="2"/>


    </TableRow>

</TableLayout>